--- a/CSS/general.css
+++ b/CSS/general.css
@@ -108,7 +108,7 @@ nav {
 .foto1 {
     width: 400px;
     height: 480px;
-    background-image: url("../IMG/sofa.jpg");
+    background-image: url("../IMG/sofa.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
