--- a/CSS/general.css
+++ b/CSS/general.css
@@ -113,3 +113,12 @@ nav {
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.buttons {
+    width: 120px;
+    height: 30px;
+    font-size: 12px;
+    font-weight: bold;
+    border: 3px solid black;
+    background: rgba(210, 215, 211, 1);
+}
